@@ -715,6 +715,7 @@ sbcl			Use Steel-Bank Common Lisp.
 scapy-crypto		Add in crypto support.
 scapy-pyx		Add in py-X support.
 scim			Enable Smart Common Input Method support.
+scsi-crypto		support LTO4+ hardware cryto key management
 sdl			Use SDL as the audio/display library.
 sdl2			Use SDL2 as the audio/display library.
 seamonkey		Use seamonkey as gecko rendering engine.
