@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.84 2020/06/02 08:24:43 adam Exp $
+# $NetBSD: Makefile,v 1.85 2020/07/28 06:42:44 kardel Exp $
 
-CONFLICTS+=		bacula-client-[0-9]* bacula-clientonly-[0-9]*
+CONFLICTS+=		bacula-client-[0-9]* bacula-clientonly-[0-9]* bareos-[0-9]* bareos-clientonly-[0-9]*
 
 #PKGREVISION= 3
 PKGREVISION= 2
